# ninsys2024-15

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test.db
src/: gemini.py  generate_qrcode.py  get_functions.py  main.py  main_streamlit.py  read_qrcode.py  read_qrcode_streamlit.py  register.py  register_streamlit.py  show_history.py  show_history_streamlit.py
src/test/: create_dummy_books.py  create_dummy_data.py  create_dummy_history.py  create_dummy_userState.py  create_dummy_users.py  db_exploration.ipynb  qr_test.py  show_db.py  test_main.py  test_show_on_map.py  test_show_on_map2.py  test_sqlite.py  time.py
