[project]
name = "ninsys15"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "folium>=0.19.4",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "opencv-python>=4.10.0.84",
    "pyzbar>=0.1.9",
    "qrcode>=8.0",
]
