[project]
name = "ninsys15"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cartopy>=0.24.1",
    "folium>=0.19.4",
    "google-generativeai>=0.8.3",
    "ipykernel>=6.29.5",
    "japanize-matplotlib>=1.1.3",
    "matplotlib>=3.10.0",
    "opencv-python>=4.10.0.84",
    "python-dotenv>=1.0.1",
    "pyzbar>=0.1.9",
    "qrcode>=8.0",
    "setuptools>=75.7.0",
    "streamlit>=1.41.1",
]
